ql/src/test/results/clientnegative/impala/create_function2.q.out
FAILED: ImpalaParseException Syntax error in line 4:
illegal syntax here
        ^
Encountered: IDENTIFIER
Expected: FROM, LOCATION, TO


